--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "sqlConnection": "Server=(local); DataBase=ScoreAppDB; Trusted_Connection=True; TrustServerCertificate=True;"
+  }
 }
