--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "sqlConnection": "Server=(local); DataBase=ScoreAppDB; Trusted_Connection=True; TrustServerCertificate=True;"
+    "sqlConnection": "Server=(local); DataBase=ScoreDB; Trusted_Connection=True; TrustServerCertificate=True;"
   }
 }
